# auto-market

./: .env.template  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_12_1857-69a299ccfa6b_add_initial_models.py  2026_03_13_0850-42886d7f9647_add_initial_models.py  2026_03_13_1701-a1df47495bbf_add_initial_models.py  2026_03_15_0825-282758b40030_add_refresh_token_model.py  2026_03_15_2212-ae3f9eebd7b9_add_refresh_token_model.py  2026_03_16_1603-2be419e8ec64_add_models.py  2026_04_03_1415-46c842b29224_password_token_model.py
mailing/: send_welcome_email.py
src/: config.py  main.py
src/car/: __init__.py  cars.py  crud.py  schemas.py
src/category/: __init__.py  categories.py  crud.py
src/core/: config.py
src/crud/: __init__.py  cars.py  categories.py  customers.py
src/customer/: __init__.py  crud.py  customers.py  image_utils.py  schemas.py
src/customer/example_different_authentifications/: __init__.py  examples.py
src/customer/security/: auth.py  dependencies.py  token_manager.py
src/database/: __init__.py  dependencies.py  engine.py  mixins.py  models.py
src/database/models/: cars.py  customers.py
src/mailing/: send_email.py  send_password_reset_email.py
src/models/: __init__.py  car.py  customer.py  dependencies.py  engine.py  mixins.py
src/routes/: __init__.py  cars.py  categories.py  customers.py
src/schemas/: __init__.py  cars.py  categories.py  customers.py
src/security/: auth.py  dependencies.py  token_manager.py  utils.py
src/services/: image_utils.py
templates/email/: password_reset.html
(+1 files in other folders)
